--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 bootloader = "0.9"
 com_logger = "0.1.0"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"], default-features = false }
 log = { version = "0.4.14", default-features = false }
 x86_64 = "0.13.2"
 
@@ -15,3 +16,7 @@ run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", 
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
 test-success-exit-code = 0x21
 test-timeout = 300
+
+[[test]]
+name = "stack_overflow"
+harness = false
