--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["YushiOMOTE <yushiomote@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-bootloader = "0.9"
+bootloader = { version = "0.9.14", features = ["map_physical_memory"] }
 com_logger = "0.1.0"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"], default-features = false }
+linked_list_allocator = "0.8.11"
 log = { version = "0.4.14", default-features = false }
 x86_64 = "0.13.2"
 
